Update Java version: 8 to 11